# KdeActivitiesFirefoxAddon

./: CHANGELOG.md  CMakeLists.txt  README.md
addon/: activities.js  manifest.json
native/: CMakeLists.txt
native/src/: Connection.cpp  Connection.hpp  FFWindow.cpp  FFWindow.hpp  FFWindowsManager.cpp  FFWindowsManager.hpp  StdStream.cpp  StdStream.hpp  kdeactivitiesffnc.json  main.cpp
